# Bucket

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  bucket.cpp  bucket.h  main.cpp  makefile  tests.h
src/: bucket.cpp  bucket.h  circular_queue.cpp  circular_queue.h  file_handle.cpp  file_handle.h  queue.cpp  queue.h  tests.h
tests/: CMakeLists.txt  test.cpp
